# SearchApp

./: .gitignore  README.md  index.html  package.json  工作进度.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  updater.rs
src-tauri/src/parsers/: excel_parser.rs  mod.rs  pdf_parser.rs
src-tauri/src/services/: cma_api.rs  local_matcher.rs  mod.rs  samr_status.rs  standard_parser.rs
