[package]
name = "standard-query"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
calamine = "0.26"
pdf = "0.9"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
