[package]
name = "standard-query"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "标准综合查询器"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
regex = "1"
calamine = "0.26"
pdf = "0.9"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
